# yaramod

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE-THIRD-PARTY  MANIFEST.in  README.md  modules_path.h.in  requirements.txt  setup.py  setup_env.sh
.github/workflows/: pipeline.yml  release.yml  test.yml
cmake/: FindFilesystem.cmake
doc/: Doxyfile
docs/rtd/: conf.py  creating_rulesets.rst  deployment.rst  development.rst  future_of_yaramod.rst  getting_started.rst  index.rst  modifying_rulesets.rst  parsing_rulesets.rst  postmortems.rst  requirements.txt  troubleshooting.rst
include/modules/: module_cuckoo.json  module_pe.json
include/yaramod/: yaramod.h  yaramod_error.h
include/yaramod/builder/: yara_expression_builder.h  yara_file_builder.h  yara_hex_string_builder.h  yara_rule_builder.h
include/yaramod/parser/: file_context.h  lexer.h  location.h  parser.h  parser_driver.h  pog_documentation_bugs.txt  pog_parser.h  uid_generator.h  value.h
include/yaramod/types/: ast_node.h  expression.h  expressions.h  features.h  hex_string.h  literal.h  location.h  meta.h  plain_string.h  regexp.h  rule.h  sections_summary.h  string.h  string_modifier.h  symbol.h  symbols.h  token.h  token_stream.h  token_type.h  tokenstream.h  variable.h  yara_file.h  yara_file_tokenized_symbols.cpp
include/yaramod/types/modules/: androguard_module.h  cuckoo_module.h  custom_module.h  dex_module.h  dotnet_module.h  elf_module.h  hash_module.h  macho_module.h  magic_module.h  math_module.h  metadata_module.h  module.h  module_content.h  module_pool.h  modules.h  modules_pool.h  pe_module.h  phish_module.h  time_module.h
include/yaramod/utils/: deep_visitor.h  filesystem.h  filesystem_operations.h  json.h  modifying_visitor.h  observing_visitor.h  passive_visitor.h  trie.h  utils.h  visitee.h  visitor.h  visitor_result.h
modules/: module_console.json  module_cuckoo.json  module_cuckoo_deprecated.json  module_dex.json  module_dotnet.json  module_elf.json  module_hash.json  module_macho.json  module_magic.json  module_math.json  module_pe.json  module_string.json  module_time.json  module_vt.json
scripts/: json_to_array.py
src/: CMakeLists.txt  json_to_byte_array.py  yaramod.cpp
src/builder/: yara_expression_builder.cpp  yara_file_builder.cpp  yara_hex_string_builder.cpp  yara_rule_builder.cpp
src/examples/cpp/dump_rules_ast/: CMakeLists.txt  dumper.h  main.cpp
src/examples/cpp/simplify_bools/: CMakeLists.txt  bool_simplifier.h  main.cpp
src/examples/python/: dump_rules_ast.py  simplify_bools.py
src/modules/public/: module_cuckoo.json  module_cuckoo_deprecated.json  module_metadata.json  module_pe.json
src/parser/: old_stuff_from_parser_driver.cpp  parser_driver.cpp
src/parser/yy/: checkTokens.sh  lexer.l  parser.y
src/python/: CMakeLists.txt  py_visitor.cpp  py_visitor.h  yaramod_python.cpp  yaramod_python.h
src/python/typings/: __init__.py  __init__.pyi
src/types/: expressions.cpp  hex_string.cpp  literal.cpp  meta.cpp  plain_string.cpp  rule.cpp  sections_summary.cpp  token.cpp  token_stream.cpp  tokenstream.cpp  variable.cpp  yara_file.cpp
src/types/modules/: androguard_module.cpp  cuckoo_module.cpp  custom_module.cpp  dex_module.cpp  dotnet_module.cpp  elf_module.cpp  hash_module.cpp  macho_module.cpp  magic_module.cpp  math_module.cpp  metadata_module.cpp  module.cpp  module_pool.cpp  modules_pool.cpp  pe_module.cpp  phish_module.cpp  time_module.cpp
src/utils/: filesystem.cpp  filesystem_operations.cpp  json.cpp  utils.cpp
tests/: CMakeLists.txt  __init__.py  builder_tests.cpp  parser_tests.cpp  utils_tests.cpp
tests/cpp/: CMakeLists.txt  builder_tests.cpp  clone_tests.cpp  literal_tests.cpp  parser_tests.cpp  representation_tests.cpp  tokenstream_tests.cpp  trie_tests.cpp  utils_tests.cpp  visitor_tests.cpp  yara_file_tests.cpp  yaramod_tests.cpp
tests/python/: __init__.py  test_builder.py  test_clone.py  test_modules.py  test_parser.py  test_representation.py  test_tokenstream.py  test_typing_stub.py  test_visitor.py  test_vt_module.py
tests/python/testing_modules/: other_pe_functionality.json  test_module.json
tests/python/testing_rules/: test_pedia.yar  test_rla.yar  test_vt.yar  testing_file.yar  testing_file_with_import.yar  testing_include.yar
